* Cleaned up IMigrationVersionInfoManager contract * Refactored migration infrastructure so that current version is always non-null * Reworked migration service to fix failing redo/rollback workflows

--- a/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
+++ b/src/octalforty.Wizardby.Core/octalforty.Wizardby.Core.csproj
@@ -355,6 +355,7 @@
     <Compile Include="Migration\MigrationMode.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Migration\MigrationVersionInfoManagerUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Refactoring\AddAuditTableRefactoring.cs" />
     <Compile Include="Refactoring\IRefactoring.cs" />
