--- a/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
+++ b/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
@@ -117,6 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EmbeddedResource Include="Resources\OxiteWithConstraints.mdl" />
     <EmbeddedResource Include="Resources\OxiteWithMissingVersion.mdl" />
     <EmbeddedResource Include="Resources\OxiteWithReorderedVersions.mdl" />
     <EmbeddedResource Include="Resources\Oxite.mdl" />
