Working on CI integration

--- a/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
+++ b/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ci\MSBuild\SynchronizeDatabasesTestFixture.cs" />
     <Compile Include="Ci\MSBuild\UpgradeDatabaseTestFixture.cs" />
     <Compile Include="Console\Deployment\DeploymentInfoParserTestFixture.cs" />
     <Compile Include="Console\InfoMigrationCommandTestFixture.cs" />
