Working on CI integration

--- a/src/octalforty.Wizardby.Tests/App.config
+++ b/src/octalforty.Wizardby.Tests/App.config
@@ -2,5 +2,6 @@
 <configuration>
     <appSettings>
         <add key="connectionString" value="data source=(local)\sqlexpress;initial catalog=test;integrated security=true" />
+        <add key="secondaryConnectionString" value="data source=(local)\sqlexpress;initial catalog=test2;integrated security=true" />
     </appSettings>
 </configuration>
