--- a/src/octalforty.Wizardby.Ci.MSBuild/octalforty.Wizardby.Ci.MSBuild.csproj
+++ b/src/octalforty.Wizardby.Ci.MSBuild/octalforty.Wizardby.Ci.MSBuild.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseTaskBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SynchronizeDatabases.cs" />
     <Compile Include="UpgradeDatabase.cs" />
