--- a/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
+++ b/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Db\SqlServer2005\SqlServer2005SchemaProviderTestFixture.cs" />
     <Compile Include="Db\SqlServer2005\SqlServer2005TypeMapperTestFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\MigrationServiceUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\octalforty.Wizardby.Ci.MSBuild\octalforty.Wizardby.Ci.MSBuild.csproj">
@@ -127,7 +128,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <EmbeddedResource Include="Resources\OxiteWithConstraints.mdl" />
-    <EmbeddedResource Include="Resources\OxiteWithMissingVersion.mdl" />
+    <EmbeddedResource Include="Resources\OxiteWithMissingVersion.mdl">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\OxiteWithReorderedVersions.mdl" />
     <EmbeddedResource Include="Resources\Oxite.mdl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
