--- a/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
+++ b/src/octalforty.Wizardby.Console/octalforty.Wizardby.Console.csproj
@@ -69,6 +69,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="RedoMigrationCommand.cs" />
+    <Compile Include="RegisterMigrationCommand.cs" />
     <Compile Include="ReverseEngineerMigrationCommand.cs" />
     <Compile Include="RollbackMigrationCommand.cs" />
     <Compile Include="ServiceBuilder.cs" />
