--- a/src/octalforty.Wizardby.Tests/App.config
+++ b/src/octalforty.Wizardby.Tests/App.config
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
     <appSettings>
-        <add key="connectionString" value="data source=(local)\sqlexpress;initial catalog=test;integrated security=true" />
-        <add key="secondaryConnectionString" value="data source=(local)\sqlexpress;initial catalog=test2;integrated security=true" />
+        <add key="connectionString" value="data source=test"/>
+        <add key="secondaryConnectionString" value="data source=test2"/>
     </appSettings>
-</configuration>
+<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
