--- a/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
+++ b/src/octalforty.Wizardby.Tests/octalforty.Wizardby.Tests.csproj
@@ -52,6 +52,9 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.65.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\SQLite\System.Data.SQLite.DLL</HintPath>
@@ -88,6 +91,7 @@
     <Compile Include="Core\Compiler\NullCodeGenerator.cs" />
     <Compile Include="Core\Compiler\SourceReaderTestFixture.cs" />
     <Compile Include="Core\Compiler\TokenSequenceTestFixture.cs" />
+    <Compile Include="Core\DbmlImporterTestFixture.cs" />
     <Compile Include="Core\Db\DbStatementBatchWriterTestFixture.cs" />
     <Compile Include="Core\Db\DbTypeMapperBaseTestFixture.cs" />
     <Compile Include="Core\Migration\Impl\DbMigrationVersionInfoManagerTestFixture.cs" />
@@ -115,6 +119,11 @@
     <Compile Include="Db\SqlServer2005\SqlServer2005SchemaProviderTestFixture.cs" />
     <Compile Include="Db\SqlServer2005\SqlServer2005TypeMapperTestFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="Util\MigrationServiceUtil.cs" />
     <Compile Include="Util\PathUtil.cs" />
   </ItemGroup>
@@ -151,6 +160,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <EmbeddedResource Include="Resources\Componento.dbml">
+      <LastGenOutput>Componento.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <None Include="Resources\sqlserver2005\20090331140131\Downgrade.sql">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -173,6 +190,9 @@
     <EmbeddedResource Include="Resources\Database.wdi">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
